# llm630-axsample

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
cmake/: DeployToDevice.cmake.in  ToolchainBootstrap.cmake
cpp/: CMakeLists.txt
cpp/hello_world/: CMakeLists.txt
cpp/libax_sys_cpp/: CMakeLists.txt
cpp/libax_sys_cpp/include/axsys/: cmm.hpp  error.hpp  result.hpp  sys.hpp  system.hpp
cpp/libax_sys_cpp/src/: cmm.cc  cmm.cpp  system.cc
cpp/sample_cmm/: CMakeLists.txt
cpp/sample_cmm/src/: sample_cmm.cc
cpp/sample_pool/: CMakeLists.txt
cpp/sample_pool/src/: sample_pool.cc
cpp/sample_sysmap/: CMakeLists.txt
cpp/sample_sysmap/src/: sample_sysmap.cc
cpp/sample_sysmap_ax/: CMakeLists.txt
cpp/sample_sysmap_ax/src/: sample_sysmap_ax.cc
cpp/sample_vin/: CMakeLists.txt
cpp/sample_vin/src/: sample_vin.cc
cpp/sample_vin_raw/: CMakeLists.txt
cpp/sample_vin_raw/src/: sample_vin_raw.cc
cpp/test_libax_sys_cpp/: CMakeLists.txt
cpp/test_libax_sys_cpp/src/: test_cmm_basic.cc  test_cmm_cache_ops.cc  test_cmm_dump_verify.cc  test_cmm_external.cc  test_cmm_fast.cc  test_cmm_map_variants.cc  test_cmm_memquery.cc  test_cmm_pool.cc  test_cmm_scaling.cc  test_main.cc
knowledge/: ax620e_bsp_sdk_cmm.md  ax620e_bsp_sdk_pool.md  ax620e_bsp_sdk_sc850sl.md  ax620e_bsp_sdk_sysmap.md  porting_order_minimal_deps.md  spec_ax_sys_cpp.md  spec_ax_sys_cpp_ja.md
spec/: spec_ax_sys_cpp.md  spec_ax_sys_cpp_ja.md
